--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,5 @@
 {
   "extends": "./tsconfig.json",
+  "include": ["src/*","./customExpress.d.ts"],
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
