--- a/package.json
+++ b/package.json
@@ -22,11 +22,17 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/typeorm": "^7.1.0",
+    "class-validator": "^0.12.2",
+    "mariadb": "^2.4.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "sequelize-typescript": "^1.1.0",
+    "typeorm": "^0.2.25"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
@@ -43,6 +49,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "jest": "26.0.1",
+    "mysql": "^2.18.1",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "swagger-ui-express": "^4.1.4",
