--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/*","./customExpress.d.ts"],
+  "include": ["src/*"],
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
