--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.0",
+    "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "mariadb": "^2.4.2",
     "passport": "^0.4.1",
