--- a/package.json
+++ b/package.json
@@ -18,26 +18,42 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "knexList": "npx knex migrate:list --knexfile db/knexfile.js",
+    "knexMake": "npx knex migrate:make initTables --migrations-directory db/migrations",
+    "knexMakeTs": "npx knex migrate:make initTablesTs -x ts --migrations-directory db/migrations",
+    "knexInitTables": "npx knex migrate:latest --knexfile db/knexfile.js",
+    "knexRollBack": "npx knex migrate:down --knexfile db/knexfile.js",
+    "knexInitSeed": "npx knex seed:make initTables --knexfile db/knexfile.js",
+    "knexSeedTables": "npx knex seed:run --knexfile db/knexfile.js"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.1.0",
+    "@nestjs/mapped-types": "^1.0.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-socket.io": "^8.0.6",
     "@nestjs/typeorm": "^7.1.0",
+    "@nestjs/websockets": "^8.0.6",
+    "@nestjsplus/knex": "^1.0.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
-    "mariadb": "^2.4.2",
+    "fuse.js": "^6.4.6",
+    "mysql2": "^2.2.5",
     "passport": "^0.4.1",
+    "passport-facebook-token": "^4.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "qrcode": "^1.4.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4",
     "sequelize-typescript": "^1.1.0",
+    "socket.io": "^4.1.3",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
@@ -48,6 +64,8 @@
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
+    "@types/passport-facebook-token": "^0.4.35",
+    "@types/passport-google-oauth20": "^2.0.9",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
@@ -57,7 +75,6 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "jest": "26.0.1",
-    "mysql": "^2.18.1",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "swagger-ui-express": "^4.1.4",
